--- a/mainStyle.css
+++ b/mainStyle.css
@@ -9,24 +9,6 @@ h2 {
   margin-bottom: 20px;
   font-family: "Times New Roman", Times, serif;
 }
-#webComic_window {
-  width: 1000px;
-  height: 500px;
-  background-color: gray;
-}
-.lnd {
-  position: fixed;
-  width: 600px;
-  height: 400px;
-  margin: 50px 150px;
-  float: left;
-}
-.active {
-  display: block;
-}
-.hidden {
-  display: none;
-}
 body {
   background-color: #f0ebd8ff;
 }
@@ -35,4 +17,38 @@ body {
 }
 .accordion-collapse {
   background-color: #f0ebd8ff;
+}
+.jcarousel-wrapper {
+  margin: 20px auto;
+  position: relative;
+  border: 10px solid #fff;
+  width: 600px;
+  height: 400px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 2px #999;
+  -moz-box-shadow: 0 0 2px #999;
+  box-shadow: 0 0 2px #999;
+}
+.jcarousel img {
+  display: block;
+  max-width: 100%;
+  height: auto !important;
+}
+.jcarousel {
+  position: relative;
+  overflow: hidden;
+  width: 300px;
+}
+.jcarousel ul {
+  width: 1500px;
+  position: relative;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.jcarousel li {
+  float: left;
+  width: 300px;
 }
