--- a/mainStyle.css
+++ b/mainStyle.css
@@ -37,7 +37,7 @@ body {
   height: auto !important;
 }
 .jcarousel {
-  position: relative;
+  position: fixed;
   overflow: hidden;
   width: 300px;
 }
@@ -51,4 +51,10 @@ body {
 .jcarousel li {
   float: left;
   width: 300px;
+}
+.active{
+  display: block;
+}
+.inactive{
+  display: none;
 }
