--- a/mainStyle.css
+++ b/mainStyle.css
@@ -13,8 +13,8 @@ body {
   background-color: #f0ebd8ff;
 }
 img {
-  width: 300px;
-  height: 300px;
+  max-width: 500px;
+  max-height: 300px;
 }
 .accordion-button {
   background-color: #f0ebd8ff;
@@ -22,48 +22,13 @@ img {
 .accordion-collapse {
   background-color: #f0ebd8ff;
 }
-.jcarousel-wrapper {
-  margin: 20px auto;
-  position: relative;
-  border: 10px solid #fff;
-  width: 600px;
-  height: 400px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 0 2px #999;
-  -moz-box-shadow: 0 0 2px #999;
-  box-shadow: 0 0 2px #999;
-}
 .jcarousel {
-  position: fixed;
-  overflow: hidden;
-  width: 300px;
-}
-.jcarousel ul {
-  width: 1500px;
   position: relative;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  overflow: hidden;
+  width: 500px;
+  height: 300px;
 }
-.jcarousel li {
-  float: left;
-  width: 300px;
-}
-.jcarousel-items-on {
-  margin: 0 auto;
-  width: 300px;
-  height: 200px;
-  display: inline-block;
-  position: fixed;
-  display: block;
-}
-.jcarousel-items-off {
-  margin: 0 auto;
-  width: 300px;
-  height: 200px;
-  display: inline-block;
-  position: fixed;
-  display: none;
+.jcarousel-item {
+  width: 100%;
+  height: 100%;
 }
